--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     .p25{text-align: left;padding-left: 48px;padding-right: 100px;margin-top: 0px;margin-bottom: 0px;text-indent: -24px;}
   </STYLE>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/WebGL.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Puzzle Royal.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
