update timing of comp

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div id="unityContainer" style="width:90%; height:auto;"></div>
       <div class="footer">
         <div>
-          <br><br>
+          <br>
             <P class="p0 ft0">Disclaimer: this <NOBR>mini-game</NOBR> was made for promotional purposes and does not represent the actual gameplay of Puzzle Royale.</P>
             <P class="p1 ft1">Please visit www.puzzleroyale.io for information about Puzzle Royale</P>
             <P class="p1 ft2">Puzzle Royale Holiday Challenge</P>
@@ -71,7 +71,7 @@
             <P class="p3 ft4">Play the 1 minute mini challenge, post your high scores and win prizes.</P>
             <P class="p3 ft4">Game and full details at <SPAN class="ft5">challenge.puzzleroyale.io</SPAN></P>
             <P class="p4 ft3">Prizes:</P>
-            <P class="p5 ft4"><SPAN class="ft3">Daily </SPAN>from 23:00 25/12/21 to 23:00 31/12/21 (HKT): <SPAN class="ft1">(total: $1470)</SPAN></P>
+            <P class="p5 ft4"><SPAN class="ft3">Daily </SPAN>from 23:00 27/12/21 to 23:00 2/1/22 (HKT):</P>
             <P class="p6 ft4"><SPAN class="ft4">●</SPAN><SPAN class="ft6">Raffle of $50 to any 2 contestants who score over 2000</SPAN></P>
             <P class="p6 ft4"><SPAN class="ft4">●</SPAN><SPAN class="ft6">Leaderboard:</SPAN></P>
             <P class="p7 ft4"><SPAN class="ft4">1.</SPAN><SPAN class="ft7">$60</SPAN></P>
@@ -82,7 +82,7 @@
             <P class="p10 ft4">5. $20</P>
             <P class="p7 ft4">6. $10</P>
             <P class="p3 ft4">Invite your friends - if they win, you get 10% on top of their winnings</P>
-            <P class="p4 ft4"><SPAN class="ft3">Tournament </SPAN>23:00 01/01/22 - 22:59 03/01/22 (HKT) : <SPAN class="ft1">(total: $2100)</SPAN></P>
+            <P class="p4 ft4"><SPAN class="ft3">Tournament </SPAN>00:00 03/01/22 - 22:59 05/01/22 (HKT) : </P>
             <P class="p11 ft10">To qualify for the tournament, players must be placed in the top 30% of all scores <NOBR>(all-time)</NOBR> at the end of the campaign.</P>
             <P class="p12 ft4"><SPAN class="ft4">1.</SPAN><SPAN class="ft7">iPhone 13 or $1100</SPAN></P>
             <P class="p12 ft4"><SPAN class="ft4">2.</SPAN><SPAN class="ft8">🥇</SPAN>$350</P>
