--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <P class="p2 ft3">Puzzle Royale Holiday Challenge</P>
 <P class="p3 ft4">Description:</P>
 <P class="p4 ft6">Play the 1 minute mini challenge, post your high scores and win prizes. Game and full details at <SPAN class="ft5">challenge.puzzleroyale.io</SPAN></P>
-<P class="p5 ft4">Prizes:</P>
-<P class="p1 ft7"><SPAN class="ft4">Daily: </SPAN></P><P><SPAN class="ft2">from 23:00 27/12/21 to 23:00 2/1/22 (HKT): </SPAN></P>
+<P class="p2 ft3">Prizes:</P><br>
+<P class="p1 ft7"><SPAN class="ft4">Daily: </SPAN></P><P class="p1 ft7"><SPAN class="ft2">from 23:00 27/12/21 to 23:00 2/1/22 (HKT): </SPAN></P>
 <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Raffle of $50 to any 2 contestants who score over 2000</SPAN></P>
 <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Leaderboard:</SPAN></P>
 <P class="p7 ft4"><SPAN class="ft4">1.</SPAN><SPAN class="ft10">$60</SPAN></P>
@@ -74,8 +74,8 @@
 <P class="p7 ft7"><SPAN class="ft7">4.</SPAN><SPAN class="ft13">$30</SPAN></P>
 <P class="p7 ft7"><SPAN class="ft7">5.</SPAN><SPAN class="ft13">$20</SPAN></P>
 <P class="p7 ft7"><SPAN class="ft7">6.</SPAN><SPAN class="ft13">$10</SPAN></P><br>
-<P class="p1 ft7"><SPAN class="ft4">Invite your friends: </SPAN></P><P>if they win, you get 10% on top of their winnings</P>
-<P class="p8 ft7"><SPAN class="ft4">Tournament: </SPAN></p><P><SPAN class="ft2">00:00 03/01/22 - 22:59 05/01/22 (HKT)</SPAN></P>
+<P class="p1 ft7"><SPAN class="ft4">Invite your friends: </SPAN></P><P class="p1 ft7">if they win, you get 10% on top of their winnings</P>
+<P class="p8 ft7"><SPAN class="ft4">Tournament: </SPAN></p><P class="p8 ft7"><SPAN class="ft2">00:00 03/01/22 - 22:59 05/01/22 (HKT)</SPAN></P>
 <P class="p9 ft14">To qualify for the tournament, players must be placed in the top 30% of all scores <NOBR>(all-time)</NOBR> at the end of the campaign.</P>
 <P class="p6 ft11"><SPAN class="ft11">1.</SPAN><SPAN class="ft12">iPhone 13 or $1100</SPAN></P>
 <P class="p6 ft11"><SPAN class="ft11">2.</SPAN><SPAN class="ft12">$350</SPAN></P>
