--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <P class="p1 ft2">Please visit <A href="http://www.puzzleroyale.io/"><SPAN class="ft1">www.puzzleroyale.io</SPAN></A> for information about Puzzle Royale.</P>
 <P class="p2 ft3">Puzzle Royale Holiday Challenge</P>
 <P class="p3 ft4">Description:</P>
-<P class="p4 ft6">Play the 1 minute mini challenge, post your high scores and win prizes. Game and full details at <SPAN class="ft5">challenge.puzzleroyale.io</SPAN></P>
+<P class="p4 ft6">This holiday season Puzzle Royale is giving away prizes to our supporters, simply follow our socials(<A href="https://twitter.com/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Twitter</SPAN></A>, <A href="https://discord.gg/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Discord</SPAN></A>, <A href="http://t.me/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Telegram</SPAN></A>) and play the 1-Minute challenge!</P>
 <P class="p2 ft3">Prizes:</P><br>
 <P class="p1 ft7"><SPAN class="ft4">Daily: </SPAN></P><P class="p1 ft7"><SPAN class="ft2">from 23:00 27/12/21 to 23:00 2/1/22 (HKT): </SPAN></P>
 <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Raffle of $50 to any 2 contestants who score over 2000</SPAN></P>
