--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="footer">
         <div>
 <P class="p0 ft0">Disclaimer: this game is made for promotional purposes and does not represent the actual gameplay of Puzzle Royale.</P>
-<P class="p1 ft2">Please visit <A href="http://www.puzzleroyale.io/"><SPAN class="ft1">www.puzzleroyale.io</SPAN></A> for information about Puzzle Royale.</P>
+<P class="p1 ft2">Please visit <A href="http://www.puzzleroyale.io/" target="_blank"><SPAN class="ft1">www.puzzleroyale.io</SPAN></A> for information about Puzzle Royale.</P>
 <P class="p2 ft3">Puzzle Royale Holiday Challenge</P>
 <P class="p3 ft4">Description:</P>
 <P class="p4 ft6">This holiday season Puzzle Royale is giving away prizes to our supporters, simply follow our socials(<A href="https://twitter.com/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Twitter</SPAN></A>, <A href="https://discord.gg/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Discord</SPAN></A>, <A href="http://t.me/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Telegram</SPAN></A>) and play the 1-Minute challenge!</P>
