--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 <P class="p2 ft3">Puzzle Royale Holiday Challenge</P>
 <P class="p3 ft4">Description:</P>
 <P class="p4 ft6">This festive season Puzzle Royale is giving away prizes to our fans, simply follow our socials(<A href="https://twitter.com/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Twitter</SPAN></A>, <A href="https://discord.gg/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Discord</SPAN></A>, <A href="http://t.me/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Telegram</SPAN></A>) and play the 1-Minute challenge!</P>
-<P class="p2 ft3">Prizes:</P><br>
+<p></p>
+<P class="p2 ft3">Prizes:</P><P></P>
 <P class="p1 ft7"><SPAN class="ft4">Daily: </SPAN></P><P class="p1 ft7"><SPAN class="ft2">from 23:00 27/12/21 to 23:00 2/1/22 (HKT): </SPAN></P>
 <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Raffle of $50 to any 2 contestants who score over 2000</SPAN></P>
 <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Leaderboard:</SPAN></P>
@@ -73,7 +74,7 @@
 <P class="p7 ft11"><SPAN class="ft11">3.</SPAN><SPAN class="ft12">$40</SPAN></P>
 <P class="p7 ft7"><SPAN class="ft7">4.</SPAN><SPAN class="ft13">$30</SPAN></P>
 <P class="p7 ft7"><SPAN class="ft7">5.</SPAN><SPAN class="ft13">$20</SPAN></P>
-<P class="p7 ft7"><SPAN class="ft7">6.</SPAN><SPAN class="ft13">$10</SPAN></P>  <br>
+<P class="p7 ft7"><SPAN class="ft7">6.</SPAN><SPAN class="ft13">$10</SPAN></P><p></p>
 <P class="p1 ft7"><SPAN class="ft4">Invite your friends: </SPAN></P><P class="p1 ft7">if they win, you get 10% on top of their winnings</P>
 <P class="p8 ft7"><SPAN class="ft4">Tournament: </SPAN><br><SPAN class="ft2">00:00 03/01/22 - 22:59 05/01/22 (HKT)</SPAN></P>
 <P class="p9 ft14">To qualify for the tournament, players must be placed in the top 30% of all scores <NOBR>(all-time)</NOBR> at the end of the campaign.</P>
