--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <P class="p10 ft14"><SPAN class="ft8">•</SPAN><SPAN class="ft15">Invite your community/friends and use the same clan tag e.g. “PR|Aaron” or “PR|Chelsea” or “BTC|Samurai”</SPAN></P>
 <P class="p11 ft14"><SPAN class="ft8">•</SPAN><SPAN class="ft15">At the end of the campaign, $1000 will be given out to the community that appears most in the daily top 20%.</SPAN></P>
 <P class="p12 ft4">Terms and Condition:</P>
-<P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Follow on Telegram, Twitter and Discord to be eligible.</SPAN></P>
+<P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Follow on Telegram, Twitter and Discord to be eligible for any prize won.</SPAN></P>
 <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Game is free to play.</SPAN></P>
 <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Rewards will be distributed once the campaign has ended.</SPAN></P>
 <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Rewards are in USD value unless stated otherwise.</SPAN></P>
