--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
       <div id="unityContainer" style="width:90%; height:auto;"></div>
       <div class="footer">
         <div>
+			<P class="p0 ft0">Also check out our airdrop campaign at: <a href="https://gleam.io/competitions/UB9rs-puzzle-royale-airdrop-campaign">https://gleam.io/competitions/UB9rs-puzzle-royale-airdrop-campaign</a></P>
+<br>
 <P class="p0 ft0">Disclaimer: this game is made for promotional purposes and does not represent the actual gameplay of Puzzle Royale.</P>
 <P class="p1 ft2">Please visit <A href="http://www.puzzleroyale.io/" target="_blank"><SPAN class="ft1">www.puzzleroyale.io</SPAN></A> for information about Puzzle Royale.</P>
 <P class="p2 ft3">Puzzle Royale Holiday Challenge</P>
