--- a/index.html
+++ b/index.html
@@ -9,48 +9,6 @@
     <link rel="stylesheet" href="Page/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
-    <STYLE type="text/css">
-
-	.ft0{font: italic 15px 'Arial';line-height: 18px;}
-	.ft1{font: italic 15px 'Arial';text-decoration: underline;color: #1155cc;line-height: 17px;}
-	.ft2{font: italic 15px 'Arial';line-height: 17px;}
-	.ft3{font: 35px 'Arial';line-height: 40px;}
-	.ft4{font: bold 15px 'Arial';line-height: 18px;}
-	.ft5{font: 15px 'Arial';text-decoration: underline;line-height: 19px;}
-	.ft6{font: 15px 'Arial';line-height: 19px;}
-	.ft7{font: 15px 'Arial';line-height: 17px;}
-	.ft8{font: 13px 'Times New Roman';line-height: 15px;}
-	.ft9{font: 15px 'Arial';margin-left: 18px;line-height: 17px;}
-	.ft10{font: bold 15px 'Arial';margin-left: 12px;line-height: 18px;}
-	.ft11{font: bold 15px 'Arial';line-height: 17px;}
-	.ft12{font: bold 15px 'Arial';margin-left: 12px;line-height: 17px;}
-	.ft13{font: 15px 'Arial';margin-left: 12px;line-height: 17px;}
-	.ft14{font: 15px 'Arial';line-height: 18px;}
-	.ft15{font: 15px 'Arial';margin-left: 18px;line-height: 18px;}
-	.ft16{font: 15px 'Arial';margin-left: 18px;line-height: 20px;}
-	.ft17{font: 15px 'Arial';line-height: 20px;}
-	.ft18{font: 15px 'Arial';margin-left: 18px;line-height: 19px;}
-
-	.p0{text-align: left;padding-right: 113px;margin-top: 0px;margin-bottom: 0px;}
-	.p1{text-align: left;margin-top: 0px;margin-bottom: 0px;}
-	.p2{text-align: left;margin-top: 16px;margin-bottom: 0px;}
-	.p3{text-align: left;margin-top: 20px;margin-bottom: 0px;}
-	.p4{text-align: left;padding-right: 237px;margin-top: 3px;margin-bottom: 0px;}
-	.p5{text-align: left;margin-top: 10px;margin-bottom: 0px;}
-	.p6{text-align: left;padding-left: 24px;margin-top: 0px;margin-bottom: 0px;}
-	.p7{text-align: left;padding-left: 72px;margin-top: 0px;margin-bottom: 0px;}
-	.p8{text-align: left;margin-top: 14px;margin-bottom: 0px;}
-	.p9{text-align: left;padding-right: 110px;margin-top: 0px;margin-bottom: 0px;}
-	.p10{text-align: left;padding-left: 48px;padding-right: 160px;margin-top: 0px;margin-bottom: 0px;text-indent: -24px;}
-	.p11{text-align: left;padding-left: 48px;padding-right: 116px;margin-top: 1px;margin-bottom: 0px;text-indent: -24px;}
-	.p12{text-align: left;margin-top: 28px;margin-bottom: 0px;}
-	.p13{text-align: left;padding-left: 48px;padding-right: 142px;margin-top: 0px;margin-bottom: 0px;text-indent: -24px;}
-	.p14{text-align: left;padding-left: 48px;padding-right: 143px;margin-top: 1px;margin-bottom: 0px;text-indent: -24px;}
-	.p15{text-align: left;padding-left: 24px;padding-right: 104px;margin-top: 0px;margin-bottom: 0px;text-indent: -24px;}
-
-
-
-  </STYLE>
     <script>
       var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build2.json", {onProgress: UnityProgress});
     </script>
@@ -87,6 +45,50 @@
                   <img src="Page/telegram.jpg" alt="Telegram" width="auto" height="50">
                 </a>
               </div>
+              <div>
+                <P class="p2 ft3">Puzzle Royale Holiday Challenge</P>
+                <P class="p3 ft4">Description:</P>
+                <P class="p4 ft6">This festive season Puzzle Royale is giving away prizes to our fans, simply follow our socials(<A href="https://twitter.com/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Twitter</SPAN></A>, <A href="https://discord.gg/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Discord</SPAN></A>, <A href="http://t.me/PuzzleRoyale"  target="_blank"><SPAN class="ft1">Telegram</SPAN></A>) and play the 1-Minute challenge!</P>
+                <p></p>
+                <P class="p2 ft3">Prizes:</P> <P class="p1 ft7">&emsp; </P>
+                <P class="p1 ft7"><SPAN class="ft4">Daily: </SPAN></P><P class="p1 ft7"><SPAN class="ft2">from 23:00 27/12/21 to 23:00 2/1/22 (HKT): </SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Raffle of $50 to any 2 contestants who score over 2000</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Leaderboard:</SPAN></P>
+                <P class="p7 ft4"><SPAN class="ft4">1.</SPAN><SPAN class="ft10">$60</SPAN></P>
+                <P class="p7 ft11"><SPAN class="ft11">2.</SPAN><SPAN class="ft12">$50</SPAN></P>
+                <P class="p7 ft11"><SPAN class="ft11">3.</SPAN><SPAN class="ft12">$40</SPAN></P>
+                <P class="p7 ft7"><SPAN class="ft7">4.</SPAN><SPAN class="ft13">$30</SPAN></P>
+                <P class="p7 ft7"><SPAN class="ft7">5.</SPAN><SPAN class="ft13">$20</SPAN></P>
+                <P class="p7 ft7"><SPAN class="ft7">6.</SPAN><SPAN class="ft13">$10</SPAN></P><p class="p7 ft7"> &emsp;</p>
+                <P class="p1 ft7"><SPAN class="ft4">Invite your friends: </SPAN></P><P class="p1 ft7">if they win, you get 10% on top of their winnings</P>
+                <P class="p8 ft7"><SPAN class="ft4">Tournament: </SPAN><br><SPAN class="ft2">00:00 03/01/22 - 22:59 05/01/22 (HKT)</SPAN></P>
+                <P class="p9 ft14">To qualify for the tournament, players must be placed in the top 30% of all scores <NOBR>(all-time)</NOBR> at the end of the campaign.</P>
+                <P class="p6 ft11"><SPAN class="ft11">1.</SPAN><SPAN class="ft12">iPhone 13 or $1100</SPAN></P>
+                <P class="p6 ft11"><SPAN class="ft11">2.</SPAN><SPAN class="ft12">$350</SPAN></P>
+                <P class="p6 ft11"><SPAN class="ft11">3.</SPAN><SPAN class="ft12">$250</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft7">4.</SPAN><SPAN class="ft13">$200</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft7">5.</SPAN><SPAN class="ft13">$150</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft7">6.</SPAN><SPAN class="ft13">$100</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft7">7.</SPAN><SPAN class="ft13">$50</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Top 30 players will enter whitelist for Puzzle Royale genesis drop</SPAN></P>
+                <P class="p8 ft4">Community/Team Prize:</P>
+                <P class="p10 ft14"><SPAN class="ft8">•</SPAN><SPAN class="ft15">Invite your community/friends and use the same clan tag e.g. “PR|Aaron” or “PR|Chelsea” or “BTC|Samurai”</SPAN></P>
+                <P class="p11 ft14"><SPAN class="ft8">•</SPAN><SPAN class="ft15">At the end of the campaign, $1000 will be given out to the community that appears most in the daily top 20%.</SPAN></P>
+                <P class="p12 ft4">Terms and Condition:</P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Follow on Telegram, Twitter and Discord to be eligible for any prize won.</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Game is free to play.</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Rewards will be distributed once the campaign has ended.</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Rewards are in USD value unless stated otherwise.</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Daily snapshot of the leaderboard will occur at 23:00 (HKT)</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">All scores below 500 will not count towards the leaderboard or tournament qualifiers.</SPAN></P>
+                <P class="p6 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Tournament contestants are encouraged to stream on discord in the </SPAN><NOBR>#mini-challenge.</NOBR></P>
+                <P class="p13 ft7"><SPAN class="ft8">•</SPAN><SPAN class="ft9">Community members are required to place the community name in front of the username eg.: “PR|aaron” or “PR|chelsea” or “BTC|Cutie”</SPAN></P>
+                <P class="p14 ft17"><SPAN class="ft8">•</SPAN><SPAN class="ft16">In the case of any disputes, the Puzzle Royale Team reserves the right of final decision or forfeit prizes from anyone</SPAN></P>
+                <P class="p14 ft17"><SPAN class="ft8">•</SPAN><SPAN class="ft18">The Puzzle Royale team reserves the rights to amend the activity rules or cancel the event.</SPAN></P>
+                <P class="p14 ft17"><SPAN class="ft8">•</SPAN><SPAN class="ft9">All final decisions belong to the Puzzle Royale team.</SPAN></P>
+                <br>
+              </div>
+
             </div>
           </div>
       </div>
