Modified index html content

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         <div class="footer">
 
           <div class="info">
-            <p>Disclaimer: this game is made for promotional purposes and does not represent the actual gameplay of Puzzle Royale. For full details of this campaign, read here:
+            <p><i>Disclaimer: this game is made for promotional purposes and does not represent the actual gameplay of <a href="https://puzzleroyale.io/">Puzzle Royale</a>. For full details of this campaign, read here:
               <a href="https://medium.com/@PuzzleRoyale/78f0881f84e7">https://medium.com/@PuzzleRoyale/78f0881f84e7</a>
-            </p>
+            </i></p>
+
+            <p><i>
+              Also check out our airdrop campaign at: <a href="https://gleam.io/competitions/UB9rs-puzzle-royale-airdrop-campaign">https://gleam.io/competitions/UB9rs-puzzle-royale-airdrop-campaign</a>
+            </i></p>
       
             <p>
               <a href="https://puzzleroyale.io/">
@@ -31,7 +35,7 @@
             </p>
       
             <div class="socials">
-              Follow us:
+              Join our community for early alpha:
               <div class="flex-container">
                 <a href="https://twitter.com/PuzzleRoyale">
                   <img src="Page/twitter.jpg" alt="Twitter" width="auto" height="50">
