--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>PuzzleRoyale</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
